Tue Jul 16 11:37:41 1996  Ian Lance Taylor  <ian@cygnus.com>

	* fileattr.c (fileattr_get): Change parameter types from char * to
 	const char *.
	(fileattr_get0, fileattr_modify, fileattr_set): Likewise.
	(fileattr_newfile): Likewise.
	* fileattr.h (fileattr_get): Update declaration.
	(fileattr_get0, fileattr_modify, fileattr_set): Likewise.
	(fileattr_newfile): Likewise.

Thu May 16 11:12:18 1996  Mark P. Immel <immel@radix.net>
			  and Jim Kingdon  <kingdon@harvey.cyclic.com>

	* client.h, client.c, checkout.c (client_send_expansions):
	Pass an additional parameter indicating where the checkout is
	to occur, to avoid passing the wrong information to send_files().
	* sanity.sh (basicb): New test basicb-cod-1 tests for above fix.

Mon Jul 15 18:26:56 1996  Ian Lance Taylor  <ian@cygnus.com>

	* recurse.c (do_recursion): Require a repository before calling
	Find_Names.
	* repos.c (Name_Repository): Remove sanity checks which spend time
	examining the filesystem.

Mon Jul 15 1996  Jim Kingdon  <kingdon@cyclic.com>

	* client.c (send_file_names): Send file names as they appear
	in CVS/Entries, rather than as specified (in cases where they
	might differ in case).
	(send_fileproc): Use file name from CVS/Entries (vers->entdata->user)
	rather than file name as specified (finfo->file) when available.

Sun Jul 14 15:39:44 1996  Mark Eichin  <eichin@cygnus.com>
			  and Ian Lance Taylor  <ian@cygnus.com>

	Improve diff -N handling of nonexistent tags and removed files.
	* diff.c (enum diff_file): New definition for whole file, moving
	unnamed enum out of diff_fileproc, renaming DIFF_NEITHER to
	DIFF_DIFFERENT, and adding DIFF_SAME.
	(diff): Look through the repository even if only one revision is
	given.
	(diff_fileproc): Change empty_file to be enum diff_file.  If there
	is no user revision, but there is a repository file, treat it as a
	removed file.  Pass empty_file to diff_file_nodiff, and set it
	from the return value.